removing old talk

--- a/speakers/nelson-brito.html
+++ b/speakers/nelson-brito.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt">
-    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BSidesRJ - BSides Rio de Janeiro</title>
-    <!-- Tailwind CSS via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <!-- CSS customizado -->
     <link rel="stylesheet" href="css/custom.css">
     <link rel="icon" type="image/x-icon" href="\images\favicon.ico">
     <style>
@@ -30,12 +27,8 @@
         }
     </style>
 </head>
-
 <body class="overflow-x-hidden min-h-screen relative">
-    <!-- Elemento de background fixo -->
     <div class="fixed-bg"></div>
-
-    <!-- Conteúdo que ficará sobre o background -->
     <div class="content relative z-20 bg-black bg-opacity-50 flex flex-col min-h-screen">
         <!-- Header -->
         <header class="bg-black bg-opacity-60 backdrop-blur-md shadow-lg py-3 flex items-center justify-between px-4">
@@ -79,10 +72,10 @@
                 </div>
 
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Inception — Tips and tricks I've learned reversing vulnerabilities!</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">TBD</h2>
                     <p class="text-lg text-white mb-4">16:30 - Palco Principal</p>
                     <div class="prose prose-lg text-gray-300">
-                        <p class="mb-6">Uma jornada através das técnicas e truques aprendidos durante anos de pesquisa e reversão de vulnerabilidades, compartilhando insights valiosos para profissionais de segurança.</p>
+                        <p class="mb-6">TBD</p>
                     </div>
                 </div>
 
