removing old schedule

--- a/schedule.html
+++ b/schedule.html
@@ -88,26 +88,26 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">09:30 - 10:10</p>
-                            <p class="font-medium text-white">O que vi em dez anos como pesquisador de segurança</p>
-                            <p class="text-sm text-gray-300">Fernando Mercês</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/fernando-merces.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">10:10 - 11:00</p>
-                            <p class="font-medium text-white">Game Hacking: do Zero ao Kernel</p>
-                            <p class="text-sm text-gray-300">Abid Lohan</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:00 - 11:50</p>
-                            <p class="font-medium text-white">Anatomia de um mini-AS: explorando fragmentos da infraestrutura global da internet</p>
-                            <p class="text-sm text-gray-300">Rodrigo Ferreira</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/rodrigo-ferreira.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:50 - 12:40</p>
-                            <p class="font-medium text-white">The Shadow Behind Red Team Radiance</p>
-                            <p class="text-sm text-gray-300">Lucas Carmo</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/lucas-carmo.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
@@ -116,25 +116,25 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">14:00 - 14:50</p>
-                            <p class="font-medium text-white">The Darkside of the Moon - How to Really Think About Anti Forensic</p>
-                            <p class="text-sm text-gray-300">Iago Blambila</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/iago-blambila.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">14:50 - 15:40</p>
-                            <p class="font-medium text-white">Malwares & EDRs</p>
-                            <p class="text-sm text-gray-300">José Luiz</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/jose-luiz.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">15:40 - 16:30</p>
-                            <p class="font-medium text-white">An approach of FBP for rapid development of offensive security tools</p>
-                            <p class="text-sm text-gray-300">Heitor Gouvêa</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/heitor-gouvea.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">16:30 - 17:20</p>
-                            <p class="font-medium text-white">Inception — Tips and tricks I've learned reversing vulnerabilities!</p>
+                            <p class="font-medium text-white">TBD</p>
                             <p class="text-sm text-gray-300">Nelson Brito</p>
                             <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
@@ -163,20 +163,20 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">10:10 - 11:00</p>
-                            <p class="font-medium text-white">Automatic detection of fake profiles on social networks</p>
-                            <p class="text-sm text-gray-300">Heitor Gouvea</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/heitor-gouvea.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:00 - 11:50</p>
-                            <p class="font-medium text-white">Persistência via Cloudf̶l̶a̶r̶e̶: Anatomia de um Ataque do Ransomware Akira</p>
-                            <p class="text-sm text-gray-300">Jefferson Macedo</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/jefferson-macedo.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:50 - 12:40</p>
-                            <p class="font-medium text-white">Cortando o mal pela raiz: modelagem de ameaças</p>
-                            <p class="text-sm text-gray-300">Felipe Navarro</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/felipe-navarro.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
@@ -185,20 +185,20 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">14:00 - 14:50</p>
-                            <p class="font-medium text-white">Privacidade, open-source e descentralização: Nym mixnet e a próxima geração de infraestrutura de privacidade</p>
-                            <p class="text-sm text-gray-300">Pedro Sydenstricker</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/pedro-sydenstricker.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">14:50 - 15:40</p>
-                            <p class="font-medium text-white">Ransomware vs EDR: Inside the Mind of Attackers</p>
-                            <p class="text-sm text-gray-300">Zoziel Freire</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/zoziel-freire.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">15:40 - 16:30</p>
-                            <p class="font-medium text-white">Visualização de modelos de machine learning não-supervisionados baseados em distância para detecção de anomalias</p>
-                            <p class="text-sm text-gray-300">Lucas Reis</p>
+                            <p class="font-medium text-white">TBD</p>
+                            <p class="text-sm text-gray-300">TBD</p>
                             <a href="speakers/lucas-reis.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
