--- a/index.html
+++ b/index.html
@@ -167,23 +167,23 @@
 		</section>
 		
 
-		<section id="patrocinadores" class="py-16">
+		<!-- <section id="patrocinadores" class="py-16">
 			<div class="container mx-auto px-4">
 				<h2 class="text-4xl font-bold text-center text-white mb-12">Desafio Bug Bounty</h2>
 				<div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-8 mx-auto max-w-5xl">
 					<div class="mb-16">
 						<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-							<div></div> <!-- Espaço vazio para centralizar -->
+							<div></div>
                             <a href="https://hackingclub.com" 
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                                 <img src="/images/apoiadores/hackingclub.png" alt="HacKing Club" class="max-h-28">
                             </a>
-							<div></div> <!-- Espaço vazio para centralizar -->
+							<div></div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 
         <section id="patrocinadores" class="py-16">
 			<div class="container mx-auto px-4">
