--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 						class="hero-button inline-block bg-yellow-400 text-black text-xl font-bold py-4 px-8 rounded-lg hover:bg-yellow-500 transition duration-300 transform hover:scale-105">
 						Compre seu ingresso (em breve)
 					</a>
-					<a href="schedule.html"
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSfi7j9jxFPIZ1nd1F2VQ2PKSz09l-GOaEP_aO6Klb_offz2kg/viewform"
 						class="inline-block bg-transparent border-2 border-yellow-400 text-yellow-400 text-xl font-bold py-4 px-8 rounded-lg hover:bg-yellow-400 hover:text-black transition duration-300">
-						Veja a programação
+						Call 4 papers
 					</a>
 				</div>
 			</div>
