--- a/speakers.html
+++ b/speakers.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BSidesRJ - Palestrantes</title>
-    <!-- Tailwind CSS via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <!-- CSS customizado -->
     <link rel="stylesheet" href="css/custom.css">
     <link rel="icon" type="image/x-icon" href="\images\favicon.ico">
     <style>
@@ -32,24 +29,18 @@
 </head>
 
 <body class="overflow-x-hidden min-h-screen relative">
-    <!-- Elemento de background fixo -->
     <div class="fixed-bg"></div>
-
-    <!-- Conteúdo que ficará sobre o background -->
     <div class="content relative z-20 bg-black bg-opacity-50 flex flex-col min-h-screen">
-        <!-- Header -->
         <header class="bg-black bg-opacity-60 backdrop-blur-md shadow-lg py-3 flex items-center justify-between px-4">
             <a href="/index.html">
                 <img src="images/logo.png" alt="BSidesRJ Logo" class="max-h-14">
             </a>
-            <!-- Menu para desktop -->
             <nav class="hidden md:flex space-x-4 text-white text-lg">
                 <a href="/index.html" class="hover:text-yellow-400 transition">Home</a>
                 <a href="/schedule.html" class="hover:text-yellow-400 transition">Agenda</a>
                 <a href="/speakers.html" class="hover:text-yellow-400 transition">Palestrantes</a>
                 <a href="/contato.html" class="hover:text-yellow-400 transition">Contato</a>
             </nav>
-            <!-- Botão do menu móvel -->
             <button id="mobile-menu-btn" class="md:hidden text-white ml-4">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
@@ -73,9 +64,30 @@
                 <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Nelson Brito</h3>
-                    <p class="text-gray-300 mb-4">Inception — TBD</p>
+                    <p class="text-gray-300 mb-4">TBD</p>
                     <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                    <h3 class="text-2xl font-bold text-white mb-2">Oliveira Lima</h3>
+                    <p class="text-gray-300 mb-4">OPSEC for Red Teams - Operações Clandestinas Autorizadas</p>
+                    <a href="speakers/oliveira-lima.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                </div>
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                    <h3 class="text-2xl font-bold text-white mb-2">Filipi Pires</h3>
+                    <p class="text-gray-300 mb-4">TBD</p>
+                    <a href="speakers/filipi-pires.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                </div>
+
+
+
+                <!-- <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                    <h3 class="text-2xl font-bold text-white mb-2"></h3>
+                    <p class="text-gray-300 mb-4"></p>
+                    <a href="speakers/.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                </div> -->
             </div>
         </main>
         <footer class="text-center p-4 bg-black bg-opacity-80 text-white mt-auto">
@@ -88,7 +100,6 @@
             const menu = document.getElementById('mobile-menu');
             menu.classList.toggle('hidden');
         }
-
         document.getElementById('mobile-menu-btn').addEventListener('click', toggleMenu);
     </script>
 </body>
