--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
 				<h1 class="text-5xl md:text-6xl font-bold text-white mb-8">BSides Rio de Janeiro 2026</h1>
 				<p class="text-xl md:text-2xl text-yellow-400 mb-8">28 de Março de 2026 - O maior evento de segurança da
 					informação do Rio</p>
-
-				<!-- Location Section -->
 				<div class="mb-12 bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 max-w-4xl mx-auto">
 					<h2 class="text-2xl font-bold text-white mb-4">Local do Evento</h2>
 					<div class="text-yellow-400 text-xl mb-4">Universidade Veiga de Almeida - Campus Tijuca</div>
@@ -111,7 +109,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="flex flex-col md:flex-row gap-6 justify-center items-center">
 					<a href="#"
 						target="_blank"
@@ -125,7 +122,6 @@
 				</div>
 			</div>
 		</main>
-
 		<section id="patrocinadores" class="py-16">
 			<div class="container mx-auto px-4">
 				<h2 class="text-4xl font-bold text-center text-white mb-12">Patrocinadores</h2>
@@ -139,7 +135,6 @@
 							</a>
 						</div>
 					</div>
-
 					<div class="mb-16">
 						<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Ouro</h3>
 						<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -153,8 +148,6 @@
 							</a>
 						</div>
 					</div>
-
-
 					<div class="mb-16">
 						<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Bronze</h3>
 						<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -165,8 +158,6 @@
 				</div>
 			</div>
 		</section>
-		
-
 		<!-- <section id="patrocinadores" class="py-16">
 			<div class="container mx-auto px-4">
 				<h2 class="text-4xl font-bold text-center text-white mb-12">Desafio Bug Bounty</h2>
@@ -184,7 +175,6 @@
 				</div>
 			</div>
 		</section> -->
-
         <section id="patrocinadores" class="py-16">
 			<div class="container mx-auto px-4">
 				<h2 class="text-4xl font-bold text-center text-white mb-12">Apoiadores</h2>
@@ -198,21 +188,9 @@
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                                 <img src="/images/apoiadores/meninacybersec.jpg" alt="Menina de Cybersec" class="max-h-28">
                             </a>
-                            <a href="https://alquymia.com.br" 
-                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                                <img src="/images/apoiadores/alquymia.png" alt="Alquymia" class="max-h-28">
-                            </a>
-                            <a href="https://investigaosint.com.br" 
-                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                                <img src="/images/apoiadores/investigaosint.png" alt="Investiga OSINT" class="max-h-28">
-                            </a>
                             <a href="https://novatec.com.br" 
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                                 <img src="/images/apoiadores/novatec.png" alt="Novatec" class="max-h-28">
-                            </a>
-                            <a href="https://ctf.chapeudepalhahacker.club" 
-                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                                <img src="/images/apoiadores/chapeudepalha.png" alt="Chapéu de Palha" class="max-h-28">
                             </a>
                             <a href="https://linktr.ee/hackinrio" 
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
@@ -230,49 +208,28 @@
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                                 <img src="/images/apoiadores/hackincariri.png" alt="Hack in Cariri" class="max-h-28">
                             </a>
-                            <a href="https://www.cajusec.com.br" 
-                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                                <img src="/images/apoiadores/cajusec.png" alt="Cajusec" class="max-h-28">
-                            </a>
-                            <a href="https://linktr.ee/hekateinc" 
-                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                                <img src="/images/apoiadores/hekate.png" alt="Hekate" class="max-h-28">
-                            </a>
                             <a href="https://linktr.ee/mentebinaria" 
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                                 <img src="/images/apoiadores/mentebinaria.png" alt="Mente Binária" class="max-h-28">
-                            </a>
-                            <a href="https://nullbyte-con.org/" 
-                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                                <img src="/images/apoiadores/nullbyte.png" alt="NullByte" class="max-h-28">
-                            </a>
-                            <a href="https://doity.com.br/0xe-hacker-conference-2025" 
-                                class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
-                                <img src="/images/apoiadores/oxe.png" alt="Oxe Hacker Conference" class="max-h-28">
                             </a>
                             <a href="https://redteamvillage.io" 
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                                 <img src="/images/apoiadores/redteamvillage.png" alt="Red Team Village" class="max-h-28">
                             </a>
-							<a href="https://www.instagram.com/meubonappetit/" 
+							<!-- <a href="https://www.instagram.com/meubonappetit/" 
 							class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
 							<img src="/images/apoiadores/bonappetit.png" alt="Bonappetit" class="max-h-28">
-							</a>
+							</a> -->
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
-		<!-- Footer -->
 		<footer class="text-center p-4 bg-black bg-opacity-80 text-white">
 			&copy; 2025 BSidesRJ - All rights reserved.
 		</footer>
 	</div>
-
-	<!-- JavaScript for mobile menu and countdown -->
 	<script>
-		// Mobile menu toggle
 		document.addEventListener('DOMContentLoaded', function () {
 			const mobileMenuBtn = document.getElementById('mobile-menu-btn');
 			const mobileMenu = document.getElementById('mobile-menu');
@@ -280,8 +237,6 @@
 				mobileMenu.classList.toggle('hidden');
 			});
 		});
-
-		// Countdown Timer
 		function updateCountdown() {
 			const eventDate = new Date('March 28, 2026 09:00:00 GMT-0300').getTime();
 			const now = new Date().getTime();
@@ -305,11 +260,8 @@
 				document.getElementById('seconds').textContent = '00';
 			}
 		}
-
-		// Update countdown every second
 		updateCountdown();
 		const countdownInterval = setInterval(updateCountdown, 1000);
 	</script>
 </body>
-
 </html>
