removing old partnerships

--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                                 <img src="/images/apoiadores/hackincariri.png" alt="Hack in Cariri" class="max-h-28">
                             </a>
-                            <a href="https://linktr.ee/mentebinaria" 
+                            <!-- <a href="https://linktr.ee/mentebinaria" 
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                                 <img src="/images/apoiadores/mentebinaria.png" alt="Mente Binária" class="max-h-28">
-                            </a>
+                            </a> -->
                             <a href="https://redteamvillage.io" 
                                 class="bg-white rounded-lg p-8 flex items-center justify-center transform hover:scale-105 transition duration-300">
                                 <img src="/images/apoiadores/redteamvillage.png" alt="Red Team Village" class="max-h-28">
