--- a/speakers.html
+++ b/speakers.html
@@ -27,7 +27,6 @@
         }
     </style>
 </head>
-
 <body class="overflow-x-hidden min-h-screen relative">
     <div class="fixed-bg"></div>
     <div class="content relative z-20 bg-black bg-opacity-50 flex flex-col min-h-screen">
@@ -59,8 +58,6 @@
         <main class="container mx-auto px-4 py-16">
             <h1 class="text-4xl font-bold text-center text-yellow-400 mb-12">Palestrantes</h1>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-
-                <!-- Nelson Brito -->
                 <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Nelson Brito</h3>
@@ -79,9 +76,12 @@
                     <p class="text-gray-300 mb-4">TBD</p>
                     <a href="speakers/filipi-pires.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
-
-
-
+                <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                    <h3 class="text-2xl font-bold text-white mb-2">Rômulo Rocha</h3>
+                    <p class="text-gray-300 mb-4">TBD</p>
+                    <a href="speakers/romulo-rocha.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                </div>
                 <!-- <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2"></h3>
