--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
 						</div>
 					</div>
 					<div class="mb-16">
+						<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Prata</h3>
+						<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+							<a href="https://bughunt.com.br"
+								class="bg-white rounded-lg p-6 flex items-center justify-center transform hover:scale-105 transition duration-300">
+								<img src="images/patrocinadores/logo-bughunt.svg" alt="Hakai" class="max-h-28">
+							</a>
+						</div>
+					</div>
+					<div class="mb-16">
 						<h3 class="text-2xl font-semibold text-center text-yellow-400 mb-8">Patrocinadores Bronze</h3>
 						<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
                             <div></div> <!-- Espaço vazio para centralizar -->
