new talk title and description

--- a/speakers/romulo-rocha.html
+++ b/speakers/romulo-rocha.html
@@ -64,15 +64,12 @@
                     <h1 class="text-4xl font-bold text-white mb-2">Rômulo Rocha</h1>
                 </div>
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">Criando agentes para resposta à incidentes</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">O primeiro Dda de um agente de IA no SOC</h2>
                     <p class="text-lg text-white mb-4">TBD</p>
                     <div class="prose prose-lg text-gray-300">
                         <p class="mb-6">
-                            Nessa palestra vou falar um pouco do uso da API da OpenAI, no qual você pode explorar o uso de tool call para criar um agente funcional para a pipeline do SOC. Vou trazer alguns exemplos interessantes na interação com a API, as maiores dificuldades, e vou trazer uma análise dos principais frameworks em Python.
-                            Tentarei trazer uma visão agnóstica a código e framework também.
-                            Falarei um pouco da memória de contexto e técnicas que utilizei para burlar algumas limitações.
-                            Também de alguns casos de uso de agente na pipeline do SOC. Uso de agentes e suas principais aplicabilidades no pipeline do SOC. Isso pode reduzir o tempo da análise de resposta e salvar tempo de analistas.
-                            O pulo do gato é que vou demonstrar e explicar como eu fiz e os resultados alcançados em experiências produtivas que escalam para milhões de alertas.
+                            Nesta palestra, compartilho a experiência prática de construção e integração de agentes de IA em um Security Operation Center.
+                            Vamos explorar quais problemas podem ser resolvidos na triagem de alertas, avaliar a eficácia dos agentes em tarefas específicas e entender como utilizar a API da OpenAI, ferramentas (‘tools’), memória e frameworks open source para criar seu próprio agente.
                         </p>
                     </div>
                 </div>
