--- a/speakers.html
+++ b/speakers.html
@@ -79,7 +79,7 @@
                 <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2">Rômulo Rocha</h3>
-                    <p class="text-gray-300 mb-4">TBD</p>
+                    <p class="text-gray-300 mb-4">O primeiro Dda de um agente de IA no SOC</p>
                     <a href="speakers/romulo-rocha.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
                 <!-- <div
