--- a/speakers/romulo-rocha.html
+++ b/speakers/romulo-rocha.html
@@ -64,7 +64,7 @@
                     <h1 class="text-4xl font-bold text-white mb-2">Rômulo Rocha</h1>
                 </div>
                 <div class="mb-12">
-                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">O primeiro Dda de um agente de IA no SOC</h2>
+                    <h2 class="text-2xl font-bold text-yellow-400 mb-4">O primeiro dia de um agente de IA no SOC</h2>
                     <p class="text-lg text-white mb-4">TBD</p>
                     <div class="prose prose-lg text-gray-300">
                         <p class="mb-6">
