--- a/schedule.html
+++ b/schedule.html
@@ -81,9 +81,9 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">10:10 - 11:00</p>
-                            <p class="font-medium text-white">TBD</p>
-                            <p class="text-sm text-gray-300">TBD</p>
-                            <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                            <p class="font-medium text-white">Pipeline seguro para modelos de IA</p>
+                            <p class="text-sm text-gray-300">Michelle Mesquita</p>
+                            <a href="speakers/michelle-mesquita.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:00 - 11:50</p>
