--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 					</div>
 				</div>
 				<div class="flex flex-col md:flex-row gap-6 justify-center items-center">
-					<a href="#"
+					<a href="https://www.sympla.com.br/evento/bsides-rio-de-janeiro/3226424"
 						target="_blank"
 						class="hero-button inline-block bg-yellow-400 text-black text-xl font-bold py-4 px-8 rounded-lg hover:bg-yellow-500 transition duration-300 transform hover:scale-105">
-						Compre seu ingresso (em breve)
+						Adquira seu ingresso de apoaidor
 					</a>
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSfi7j9jxFPIZ1nd1F2VQ2PKSz09l-GOaEP_aO6Klb_offz2kg/viewform"
 						class="inline-block bg-transparent border-2 border-yellow-400 text-yellow-400 text-xl font-bold py-4 px-8 rounded-lg hover:bg-yellow-400 hover:text-black transition duration-300">
