--- a/schedule.html
+++ b/schedule.html
@@ -156,9 +156,9 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:00 - 11:50</p>
-                            <p class="font-medium text-white">TBD</p>
-                            <p class="text-sm text-gray-300">TBD</p>
-                            <a href="speakers/jefferson-macedo.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                            <p class="font-medium text-white">Android Game Hacking</p>
+                            <p class="text-sm text-gray-300">Abid Lohan</p>
+                            <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:50 - 12:40</p>
