--- a/speakers.html
+++ b/speakers.html
@@ -88,6 +88,12 @@
                     <p class="text-gray-300 mb-4">Pipeline seguro para modelos de IA</p>
                     <a href="speakers/michelle-mesquita.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
                 </div>
+                 <div
+                    class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
+                    <h3 class="text-2xl font-bold text-white mb-2">Abid Lohan</h3>
+                    <p class="text-gray-300 mb-4">Android Game Hacking</p>
+                    <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300">Ver mais detalhes →</a>
+                </div>
                 <!-- <div
                     class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg p-6 transform hover:scale-105 transition duration-300">
                     <h3 class="text-2xl font-bold text-white mb-2"></h3>
