--- a/schedule.html
+++ b/schedule.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BSidesRJ - BSides Rio de Janeiro</title>
-    <!-- Tailwind CSS via CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <!-- CSS customizado -->
     <link rel="stylesheet" href="css/custom.css">
     <link rel="icon" type="image/x-icon" href="\images\favicon.ico">
     <style>
@@ -131,8 +128,6 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Secondary Stage -->
                 <div class="bg-black bg-opacity-60 backdrop-blur-md rounded-lg shadow-lg p-4 md:p-6">
                     <h2 class="text-2xl font-bold mb-4 text-center text-white">Secondary Stage</h2>
                     <div class="space-y-4">
@@ -162,9 +157,9 @@
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">11:50 - 12:40</p>
-                            <p class="font-medium text-white">TBD</p>
-                            <p class="text-sm text-gray-300">TBD</p>
-                            <a href="speakers/felipe-navarro.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                            <p class="font-medium text-white">De 0 ao SOC: A curva real que ninguém ensina (e por que isso importa)</p>
+                            <p class="text-sm text-gray-300">Kizzy Macedo Benjamin</p>
+                            <a href="speakers/kizzy-macedo.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                         </div>
                         <div class="border-b border-gray-600 pb-4">
                             <p class="text-lg font-semibold text-yellow-400">12:40 - 14:00</p>
@@ -196,14 +191,10 @@
                 </div>
             </div>
         </main>
-
-        <!-- Footer -->
         <footer class="text-center p-4 bg-black bg-opacity-80 text-white">
             &copy; 2025 BSidesRJ - All rights reserved.
         </footer>
     </div>
-
-    <!-- JavaScript para alternar o menu móvel (client-side) -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const mobileMenuBtn = document.getElementById('mobile-menu-btn');
@@ -214,5 +205,4 @@
         });
     </script>
 </body>
-
 </html>
